--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -4,6 +4,7 @@ body {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  display: flex;
   margin: 0;
 }
 
